# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-emergency_response_allocation"
version = "0.1.0"
description = "Emergency Response Allocation environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    "openai>=1.70.0",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    # Examples:
    # "numpy>=1.19.0",
    # "torch>=2.0.0",
    # "gymnasium>=0.29.0",
    # "openspiel>=1.0.0",
    # "smolagents>=1.22.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
train = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.30.0",
    "matplotlib>=3.8.0",
    "packaging>=24.0",
    "torch>=2.4.0",
    "transformers>=4.57.0",
    "trl>=0.25.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m emergency_response_allocation.server.app
server = "emergency_response_allocation.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["emergency_response_allocation", "emergency_response_allocation.server"]
package-dir = { "emergency_response_allocation" = ".", "emergency_response_allocation.server" = "server" }
